# DevAI

./: main.py  pyproject.toml  python_questions.json
templates/: index.html  question.html  results.html
